--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ b{
 </head>
 <body>
     <div>
-        <img src="/web-dev-projects/Stats preview card/images/image-header-mobile.jpg" alt="">
+        <img src="/images/image-header-mobile.jpg" alt="">
         <h1>Get <b>insights</b> that help your business grow.</h1>
         <p id="mainParagraph">Discover the benefits of data analytics and make better desicions regarding revenue, customer experience, and overall efficiency.</p>
         <h3 id="compNum">10k+</h3>
